fixing tool buttons z-index

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -124,7 +124,9 @@ html body {
   --z-index-popover: 400;
   --z-index-tooltip: 500;
   --z-index-notification: 600;
-  --z-index-excalidraw: 1000;
+  --z-index-excalidraw: 900;
+  --z-index-tool-buttons: 1000;
+  
   
   --left-vertical-collapsed-menu-width: 48px;
   
